# nanolog

./: .dockerignore  .gitignore  Dockerfile  README.md  README_EN.md  docker-compose-distributed.yml  docker-compose.yml  nginx-dist.conf
.github/workflows/: docker-publish.yml  maven-build.yml  maven-publish-github.yml  maven-publish.yml  python-publish.yml
scripts/: gen_data.sh  install_sdk.sh  stress_test.sh  test_ingest.sh  test_multilang.sh  test_query.sh
sdks/go/nanolog/: go.mod  handler.go  registry.go
sdks/java/nanolog-spring-boot-starter/: .gitignore  README.md  application.yml.example  pom.xml
sdks/python/: README.md  pyproject.toml
sdks/python/nanolog/: __init__.py  example.py  handler.py  mock_server.py  worker.py
server/: go.mod  go.sum  run.sh
server/cmd/nanolog/: main.go
server/internal/cluster/: aggregator.go
server/internal/controller/: store.go
server/internal/engine/: cleaner.go  column.go  flusher.go  histogram.go  logrow.go  memtable.go  nanoql_bridge.go  query_engine.go  stats.go  wal.go
server/internal/model/: log.go
server/internal/models/: registry.go
server/internal/registry/: registry_test.go  server.go  store.go
server/internal/server/: http.go
server/internal/storage/: reader.go  writer.go
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/css/: style.css  tailwind.min.css
web/js/: app.js  i18n.js
web/src/: App.vue
web/src/api/: index.ts
web/src/assets/: main.css
web/src/components/: Chart.vue  ContextModal.vue  DonutChart.vue  Histogram.vue  LogDrawer.vue  (+6 more)
(+23 files in other folders)
