[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanolog-sdk"
version = "0.1.0"
description = "Official Python SDK for NanoLog"
readme = "README.md"
authors = [
  { name = "Coffers Tech", email = "ruifafan@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { Homepage = "https://github.com/coffersTech/nanolog" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["nanolog*"]
